--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    amount<input type="number" id="principle"> <br/>
    rate <input type="range" id="rate" min="1" max="20" value="10.25"> <br/>
    <span id="rate_val">
-    10.25%
+    3.5%
     </span>
-   no. of years <input type="number" id="years"><option value="1">1</option> <br/>
+   no. of years <input type="number" id="years"><option value="1"></option> <br/>
    intrest : <span id="result"></span><br>
    <button onclick="compute interest()">compute interest</button>
    <footer>
