--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>simple interest calculator</h1>
 
    amount<input type="number" id="principle"> <br/>
-   rate <input type="range" id="rate" min="1" max="20" value="3.5"> <br/>
+   rate <input type="range" id="rate" min="1" max="20" value="3.5"> 
    <span id="rate_val">
     3.5%
     </span>
@@ -15,7 +15,7 @@
    intrest : <span id="result"></span><br>
    <button onclick="compute interest()">compute interest</button>
    <footer>
-    &#169; This Calculator belongs to --your name--
+    &#169; sabarish
 </footer>
 
  </div>
