--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    rate <input type="range" id="rate" min="1" max="20" value="3.5"> 
    <span id="rate_val">
     3.5%
-    </span> <br/>
+  </span> </br>
    no. of years <input type="number" id="years"><option value="1"></option> <br/>
-   intrest : <span id="result"></span><br>
+    <span id="result"></span><br>
    <button onclick="compute interest()">compute interest</button>
    <footer>
     &#169; sabarish
