--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <div class="maindiv">
     <h1>simple interest calculator</h1>
 
-   amount<input type="number" id="principle"> <br/>
-   rate <input type="range" id="rate" min="1" max="20" value="3.5"> 
+   amount   <input type="number" id="principle"> <br/>
+   intrest rate <input type="range" id="rate" min="1" max="20" value="3.5"> 
    <span id="rate_val">
     3.5%
   </span> </br>
