--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span id="result"></span><br>
    <button onclick="compute interest()">compute interest</button>
    <footer>
-    &#169; @ Everyone Can Get Rich
+    &#169;  Everyone Can Get Rich
 </footer>
 
  </div>
