--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <h1>simple interest calculator</h1>
 
    amount   <input type="number" id="principle"> <br/>
-   intrest rate <input type="range" id="rate" min="1" max="20" value="3.5"> 
+   intrest rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"> 
    <span id="rate_val">
-    3.5%
+    10.25
   </span> </br>
    no. of years <input type="number" id="years"><option value="1"></option> <br/>
     <span id="result"></span><br>
-   <button onclick="compute interest()">compute interest</button>
+   <button onclick="compute()">compute interest</button>
    <footer>
     &#169;  Everyone Can Get Rich
 </footer>
