--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <span id="rate_val">
     10.25
   </span> </br>
-   no. of years <input type="number" id="years"><option value="1"></option> <br/>
+   No. of Years <select id="years"></select> <br/>
     <span id="result"></span><br>
    <button onclick="compute()">compute interest</button>
    <footer>
