--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <head>
+ <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 <title>"simple interest calculator</title>
 </head>
-<body>
+<body onload="finishPage()">
  <div class="maindiv">
     <h1>simple interest calculator</h1>
 
