--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <h1>simple interest calculator</h1>
 
    amount   <input type="number" id="principle"> <br/>
-   intrest rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"> 
+   intrest rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"  onchange=refreshSlider()> 
    <span id="rate_val">
-    10.25
+    10.25%
   </span> </br>
    No. of Years <select id="years"></select> <br/>
     <span id="result"></span><br>
+   <span id="results"></span><br><br>
    <button onclick="compute()">compute interest</button>
    <footer>
     &#169;  Everyone Can Get Rich
