--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
    amount   <input type="number" id="principle"> <br/>
    intrest rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"  onchange=refreshSlider()> 
-   <span id="rate_val">
+   <span id="rate_label">
     10.25%
   </span> </br>
    No. of Years <select id="years"></select> <br/>
     <span id="result"></span><br>
-   <span id="results"></span><br><br>
-   <button onclick="compute()">compute interest</button>
+    <button onclick="compute()">compute interest</button>
+    <span id="results"></span><br><br>
    <footer>
-    &#169;  Everyone Can Get Rich
+    & copy;  Everyone Can Get Rich
 </footer>
 
  </div>
