--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <span id="result"></span><br>
     <button onclick="compute()">compute interest</button>
     <span id="results"></span><br><br>
-   <footer>
-    & copy;  Everyone Can Get Rich
-</footer>
+   <footer>&copy;  Everyone Can Get Rich</footer>
 
  </div>
 </body>
