--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>simple interest calculator</h1>
 
    amount   <input type="number" id="principle"> <br/>
-   intrest rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"  onchange=refreshSlider()> 
-   <span id="rate_label">
+   intrest rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange=refreshSlider()> 
+   <span id="ratelabel">
     10.25%
   </span> </br>
    No. of Years <select id="years"></select> <br/>
