--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
- <script src="script.js"></script>
+    <head>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-<title>"simple interest calculator</title>
-</head>
-<body onload="finishPage()">
- <div class="maindiv">
-    <h1>simple interest calculator</h1>
+    <title>Web App - Simple Interest Calculator</title>
+    </head>
+    <body onload="finishPage()">
+    	<div class="maindiv">
+        <h1>Simple Interest Calculator</h1>
 
-   amount   <input type="number" id="principle"> <br/>
-   intrest rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange=refreshSlider()> 
-   <span id="ratelabel">
-    10.25%
-  </span> </br>
-   No. of Years <select id="years"></select> <br/>
-    <span id="result"></span><br>
-    <button onclick="compute()">compute interest</button>
-    <span id="results"></span><br><br>
-   <footer>&copy;  Everyone Can Get Rich</footer>
+        Amount <input type="number"  id="principal">  <br/>
+        Interest Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange=refreshSlider()>  <span id="rateLabel">10.25%</span><br/>
+        No. of Years <select id="years"></select> <br/>
+        <span id="result"></span><br>
 
- </div>
-</body>
+        <button onclick="compute()">Compute Interest</button>
+        <span id="results"></span><br><br>
+        <footer>&copy; Everyone Can Get Rich</footer>
+        </div>
+    </body>
 </html>
